Working function with Azure

--- a/index.html
+++ b/index.html
@@ -957,6 +957,7 @@
 			let currentSound = null;
 
 			async function speakMessage(fullMessage) {
+			// THIS FUNCTION USES AZURE!
 			// Transliterate the message to contain only English alphabet characters
 				const transliteratedMessage = transliterate(fullMessage);
 
