--- a/index.html
+++ b/index.html
@@ -956,7 +956,7 @@
 
 			let currentSound = null;
 
-			async function speakMessage(fullMessage) {
+			async function speakMessage_azure(fullMessage) {
 			// THIS FUNCTION USES AZURE!
 			// Transliterate the message to contain only English alphabet characters
 				const transliteratedMessage = transliterate(fullMessage);
@@ -1081,7 +1081,7 @@
 			}
 
 
-			async function speakMessage_coqui(fullMessage) {
+			async function speakMessage(fullMessage) {
 				// Transliterate the message to contain only English alphabet characters
 				const transliteratedMessage = transliterate(fullMessage);
 
