--- a/index.html
+++ b/index.html
@@ -1082,6 +1082,7 @@
 
 
 			async function speakMessage(fullMessage) {
+				//THIS FUNCTION USES COQUI_TTS
 				// Transliterate the message to contain only English alphabet characters
 				const transliteratedMessage = transliterate(fullMessage);
 
