--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 			let speed;
 			var distEachOther = 0;
 			let directionText = "Not moving"
-			let speakFancy = false;
+			let speakFancy;
 
 			function getCurrentLocation() {
 				if (navigator.geolocation) {
