--- a/index.html
+++ b/index.html
@@ -368,7 +368,6 @@
 			let speed;
 			var distEachOther = 0;
 			let directionText = "Not moving"
-			let speakFancy;
 
 			function getCurrentLocation() {
 				if (navigator.geolocation) {
@@ -1192,6 +1191,8 @@
 			let weatherDescription = null;
 
 			var noNarrative;
+			var speakFancy;
+
 			var previousTagID = ""; // Variable to store the previous tagID
 
 			let cachedTagInfo;
