--- a/index.html
+++ b/index.html
@@ -1479,11 +1479,11 @@
 							if (myTag === 14) {
 								speakFancy = false;  // Set speakFancy to false when myTag is 14
 								displayText("Using Coqui's Voice");
-								console.log("Coqui TTS");
+								console.log("Coqui TTS in listening mode");
 							} else if (myTag === 15) {
 								speakFancy = true;   // Set speakFancy to true when myTag is 15
 								displayText("Using Azure's Voice");
-								console.log("Azure TTS");
+								console.log("Azure TTS in listening mode");
 							}
 							previousTagID = myTag; // Update previousTag
 						}
