--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@
 
 			function interactFunction() {
 				listenClient = false;
+				console.log("Interacting as " + deviceName);
+
 				// Hide the Listen button
 				document.getElementById('listenButton').style.display = 'none';
 				// Hide the Interact button
@@ -171,6 +173,7 @@
 
 			function listenFunction() {
 				listenClient = true;
+				console.log("Listening as " + deviceName);
 				// Hide the Interact button
 				document.getElementById('interactButton').style.display = 'none';
 				// Show toggle
