--- a/index.html
+++ b/index.html
@@ -1286,9 +1286,8 @@
 							const isCheckpointKeyChanged = previousCheckpointKey !== currentCheckpointKey;
 							const isChkPointDistanceChanged = JSON.stringify(previousChkPointDistance) !== JSON.stringify(chkPointDistance);
 
-							if (isCheckpointKeyChanged || isChkPointDistanceChanged) {
+							if ((isCheckpointKeyChanged || isChkPointDistanceChanged) && !listenClient) {
 								console.log('Current Checkpoint Set:', currentCheckpointKey, 'Distances to all checkpoints:', chkPointDistance);
-
 								previousCheckpointKey = currentCheckpointKey;
 								previousChkPointDistance = JSON.parse(JSON.stringify(chkPointDistance));
 							}
