--- a/index.html
+++ b/index.html
@@ -299,9 +299,9 @@
 			function wakeLock() {
 				if ('wakeLock' in navigator) {
 							navigator.wakeLock.request('screen').then(() => {
-								console.log( deviceName +' screen wake lock activated');
+								console.log(' screen wake lock activated');
 							}).catch((err) => {
-								console.error(deviceName +' failed to activate wake lock:', err);
+								console.error(' failed to activate wake lock:', err);
 							});
 						} else {
 							console.warn('Wake lock API not supported.');
