--- a/index.html
+++ b/index.html
@@ -1540,7 +1540,7 @@
 						topSection.style.display = 'none';
 						currentLocation.style.display = 'none';
 						hachiCheckboxContainer.style.display = 'none';
-						const avatarCanvas = document.querySelector('avatarCanvas');  // Select the div 'avatarCanvas'
+						const avatarCanvas = document.getElementById('avatarCanvas');  // Select the element with ID 'avatarCanvas'
 						if (avatarCanvas) {
 							avatarCanvas.innerHTML = '<span class="material-symbols-outlined">hearing</span>';  // Replace the content
 						}
