--- a/index.html
+++ b/index.html
@@ -1544,7 +1544,7 @@
 						if (avatarCanvas) {
 							avatarCanvas.innerHTML = `
 								<span class="material-symbols-outlined hearing-icon">hearing</span>
-								Listening to the story as ${deviceName}
+								<p> Listening to the story as ${deviceName}</p>
 							`; // Replace the content
 						}
 						displayText("Listening as " + characterName + ".");
