--- a/index.html
+++ b/index.html
@@ -1544,7 +1544,7 @@
 						if (avatarCanvas) {
 							avatarCanvas.innerHTML = `
 								<span class="material-symbols-outlined hearing-icon">hearing</span>
-								<span> Listening to the story as ${deviceName}</span>
+								<span class="loading-text"> Listening to the story as ${deviceName}</span>
 							`; // Replace the content
 						}
 						displayText("Listening as " + characterName + ".");
