--- a/index.html
+++ b/index.html
@@ -1545,7 +1545,7 @@
 							avatarCanvas.innerHTML = `
 								<div class="center-wrapper">
 									<span class="material-symbols-outlined hearing-icon">hearing</span>
-									<span id="loading-text"> Listening to the story as ${deviceName}</span>
+									<span id="loading-text"> Listening to the story as ${characterName}</span>
 								</div>
 							`; // Replace the content
 						}
