--- a/index.html
+++ b/index.html
@@ -1515,7 +1515,8 @@
 
 			function toggleListening() {
 				const toggleSwitch = document.getElementById('toggleSwitch');
-				//const deviceName = toggleSwitch.checked ? "hachi_BT" : "avatar_BT";
+				const hearingIcon = document.querySelector('.hearing-icon');
+
 				deviceName = toggleSwitch.checked ? "hachi_BT" : "avatar_BT";
 				const databaseName = deviceName === 'hachi_BT' ? 'avatar_data' : 'hachi_data';
 
@@ -1540,6 +1541,10 @@
 						topSection.style.display = 'none';
 						currentLocation.style.display = 'none';
 						hachiCheckboxContainer.style.display = 'none';
+						toggleSwitch.addEventListener('change', () => {
+							// Change the color based on the toggle state
+							hearingIcon.style.color = toggleSwitch.checked ? 'green' : 'red';
+						});
 						const avatarCanvas = document.getElementById('avatarCanvas');  // Select the element with ID 'avatarCanvas'
 						if (avatarCanvas) {
 							const avatarBTdiv = document.getElementById('avatarBTdiv');
