--- a/index.html
+++ b/index.html
@@ -1544,6 +1544,7 @@
 
 						toggleSwitch.addEventListener('change', () => {
 							// Change the color based on the toggle state
+							console.log("Toggled");
 							hearingIcon.style.color = toggleSwitch.checked ? 'yellow' : 'red';
 						});
 
