--- a/index.html
+++ b/index.html
@@ -1563,7 +1563,7 @@
 							// Once the timeout happens, check the toggleState and apply the color
 							const hearingIcon = document.querySelector('.hearing-icon');
 							if (hearingIcon) {
-								hearingIcon.style.color = toggleState ? 'yellow' : 'red'; // Apply the color based on toggleState
+								hearingIcon.style.color = toggleState ? '#4caf50' : '#0082fc'; // Apply the color based on toggleState
 							}
 						}
 						displayText("Listening as " + characterName + ".");
