--- a/index.html
+++ b/index.html
@@ -162,8 +162,7 @@
 				var checkbox = document.getElementById("hachiCheckbox");
 				if (checkbox.checked) {
 					deviceName = "hachi_BT";
-					console.log("Setting to "+deviceName);
-					console.log("Loading settings for hachi_BT");
+					console.log("Loading settings for "+ deviceName);
 					interactionMode="_int";
 					moveSource = 'hachi_moves.json';
 					movePatterns = 'hachi_patterns.json';
@@ -172,8 +171,7 @@
 					initializeSounds();
 				} else {
 					deviceName = "avatar_BT";
-					console.log("Setting to "+deviceName);
-					console.log("Loading settings for avatar_BT");
+					console.log("Loading settings for "+ deviceName);
 					interactionMode="_int";
 					moveSource = 'avatar_moves.json';
 					movePatterns = 'avatar_patterns.json';
