--- a/index.html
+++ b/index.html
@@ -1593,7 +1593,7 @@
 			});
 
 			window.addEventListener('beforeunload', function (event) {
-				console.log('End of session');
+				console.log('end of session');
 			});
 		</script>
 	</body>
